[package]
name = "adalm_pluto_viewer"
version = "0.1.0"
authors = ["Martin Kielhorn <kielhorn.martin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "*"
imgui = "*"
imgui-glium-renderer = "*"
imgui-winit-support = "*"
chrono = "*"
crossbeam-channel = "*"
crossbeam-utils = "*"
#positioned-io = "*"
core_affinity = "*"
industrial-io = "*" # 0.2.0
fftw = "*"
num-complex = "*"

# this shaves 1MB off the binary
[profile.release]
panic = "abort"
